--- a/index.html
+++ b/index.html
@@ -179,24 +179,24 @@
                 </div>
             </div>
             <div class="item">
-                <img class="image" src="assets/images/works/glcsolutions.png" alt="" />
+                <img class="image" src="assets/images/sushii.png" alt="" />
                 <div class="overlay">
                     <p>Aqui vai alguma descrição sobre o projeto em si ou a própria empresa.</p>
-                    <a href="" class="button">Visite o website</a>
+                    <a href="https://cardapio-sushi.pages.dev/" class="button">Visite o website</a>
                 </div>
             </div>
             <div class="item">
-                <img class="image" src="assets/images/works/coupal.png" alt="" />
+                <img class="image" src="assets/images/brow.png" alt="" />
                 <div class="overlay">
                     <p>Aqui vai alguma descrição sobre o projeto em si ou a própria empresa.</p>
-                    <a href="" class="button">Visite o website</a>
+                    <a href="https://browniecoffee.pages.dev/" class="button">Visite o website</a>
                 </div>
             </div>
             <div class="item">
-                <img class="image" src="assets/images/works/wedlerengineering.png" alt="" />
+                <img class="image" src="assets/images/bolo.png" alt="" />
                 <div class="overlay">
                     <p>Aqui vai alguma descrição sobre o projeto em si ou a própria empresa.</p>
-                    <a href="" class="button">Visite o website</a>
+                    <a href="https://09fd3a3a.receitas-4af.pages.dev/" class="button">Visite o website</a>
                 </div>
             </div>
         </div>
